--- a/Module2/index.html
+++ b/Module2/index.html
@@ -1,2 +1,11 @@
-It is a repository for Html,CSS and javascript course tests of coursera Website.
- 
+<!DOCTYPE html>
+<html>
+    <head>
+        
+    </head>
+
+    <body>
+
+
+    </body>
+</html>
