changing h1 to h2 for better font size

--- a/Module2/index.html
+++ b/Module2/index.html
@@ -2,15 +2,17 @@
 <html>
     <head>
         <title>Assigning soloution to module 2</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content=" width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/styles.css">
     </head>
 
     <body>
         <h1 id="head">Our menu</h1>
         
-        <div id="chicken"> <h1>Chicken</h1> Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda perferendis atque dolorem aliquam labore nisi vitae, quia doloribus veniam possimus dolorum dicta aliquid facere temporibus, ducimus, aspernatur nemo impedit corporis.</div> 
-        <div id="beef"> <h1>Beef</h1> Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda perferendis atque dolorem aliquam labore nisi vitae, quia doloribus veniam possimus dolorum dicta aliquid facere temporibus, ducimus, aspernatur nemo impedit corporis.</div> 
-        <div id="sushi"> <h1>Sushi</h1> Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda perferendis atque dolorem aliquam labore nisi vitae, quia doloribus veniam possimus dolorum dicta aliquid facere temporibus, ducimus, aspernatur nemo impedit corporis.</div>
+        <div> <h2 id="chicken">Chicken</h2> Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda perferendis atque dolorem aliquam labore nisi vitae, quia doloribus veniam possimus dolorum dicta aliquid facere temporibus, ducimus, aspernatur nemo impedit corporis.</div> 
+        <div> <h2 id="beef">Beef</h2> Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda perferendis atque dolorem aliquam labore nisi vitae, quia doloribus veniam possimus dolorum dicta aliquid facere temporibus, ducimus, aspernatur nemo impedit corporis.</div> 
+        <div> <h2 id="sushi">Sushi</h2> Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda perferendis atque dolorem aliquam labore nisi vitae, quia doloribus veniam possimus dolorum dicta aliquid facere temporibus, ducimus, aspernatur nemo impedit corporis.</div>
         
     </body>
 </html>
